toolkit/themes/shared/in-content/common.inc.css
/* ... */
html
|
html
xul
|
page
xul
|
window
{
font
:
message
-
box
;
-
moz
-
appearance
:
none
;
background
-
color
:
var
(
-
-
in
-
content
-
page
-
background
)
;
color
:
var
(
-
-
in
-
content
-
page
-
color
)
;
}
html
|
body
{
font
-
size
:
15px
;
font
-
weight
:
normal
;
margin
:
0
;
}
html
|
h1
{
font
-
size
:
2
.
5em
;
font
-
weight
:
lighter
;
line
-
height
:
1
.
2
;
color
:
var
(
-
-
in
-
content
-
text
-
color
)
;
margin
:
0
;
margin
-
bottom
:
.
5em
;
}
html
|
hr
{
border
-
style
:
solid
none
none
none
;
border
-
color
:
var
(
-
-
in
-
content
-
border
-
color
)
;
}
html
|
h2
{
font
-
weight
:
600
;
line
-
height
:
1
.
4em
;
}
*
|
*
.
main
-
content
{
padding
:
40px
28px
;
overflow
:
auto
;
}
/
*
tabpanels
and
tabs
*
/
xul
|
tabpanels
{
-
moz
-
appearance
:
none
;
border
:
none
;
padding
:
0
;
background
-
color
:
transparent
;
color
:
inherit
;
}
xul
|
tabs
{
margin
-
bottom
:
15px
;
border
-
top
:
1px
solid
var
(
-
-
in
-
content
-
box
-
border
-
color
)
;
border
-
bottom
:
1px
solid
var
(
-
-
in
-
content
-
box
-
border
-
color
)
;
background
-
color
:
var
(
-
-
in
-
content
-
page
-
background
)
;
color
:
var
(
-
-
in
-
content
-
tab
-
color
)
;
}
xul
|
tab
{
-
moz
-
appearance
:
none
;
margin
-
top
:
0
;
padding
:
4px
20px
0
!
important
;
min
-
height
:
44px
;
color
:
inherit
;
background
-
color
:
var
(
-
-
in
-
content
-
page
-
background
)
;
border
-
bottom
:
4px
solid
transparent
;
transition
:
background
-
color
50ms
ease
0s
;
}
xul
|
tab
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
box
-
background
-
hover
)
;
}
xul
|
tab
[
selected
]
{
background
-
color
:
var
(
-
-
in
-
content
-
box
-
background
-
hover
)
;
border
-
bottom
-
color
:
var
(
-
-
in
-
content
-
border
-
highlight
)
;
}
/
*
html
buttons
*
/
html
|
button
{
padding
:
3px
;
}
/
*
xul
buttons
and
menulists
*
/
*
|
button
html
|
select
html
|
input
[
type
=
"
color
"
]
xul
|
menulist
{
-
moz
-
appearance
:
none
;
min
-
height
:
32px
;
/
*
!
important
overrides
button
.
css
for
disabled
and
default
XUL
buttons
:
*
/
color
:
inherit
!
important
;
border
:
1px
solid
transparent
;
/
*
needed
for
high
-
contrast
mode
where
it
'
ll
show
up
*
/
border
-
radius
:
2px
;
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
)
;
font
-
weight
:
400
;
padding
:
0
8px
;
text
-
decoration
:
none
;
margin
:
4px
8px
;
/
*
Ensure
font
-
size
isn
'
t
overridden
by
widget
styling
(
e
.
g
.
in
forms
.
css
)
*
/
font
-
size
:
1em
;
}
xul
|
button
html
|
button
{
/
*
use
the
same
margin
of
other
elements
for
the
alignment
*
/
margin
-
left
:
4px
;
margin
-
right
:
4px
;
}
html
|
button
:
:
-
moz
-
focus
-
inner
html
|
select
:
:
-
moz
-
focus
-
inner
html
|
input
[
type
=
"
color
"
]
:
:
-
moz
-
focus
-
inner
{
border
:
none
;
}
*
|
button
:
-
moz
-
focusring
html
|
select
:
-
moz
-
focusring
html
|
input
[
type
=
"
color
"
]
:
-
moz
-
focusring
xul
|
menulist
:
-
moz
-
focusring
{
outline
:
2px
solid
var
(
-
-
in
-
content
-
border
-
active
)
;
/
*
offset
outline
to
align
with
1px
border
-
width
set
for
buttons
/
menulists
above
.
*
/
outline
-
offset
:
-
1px
;
/
*
Make
outline
-
radius
slightly
bigger
than
the
border
-
radius
set
above
*
to
make
the
thicker
outline
corners
look
smooth
*
/
-
moz
-
outline
-
radius
:
3px
;
box
-
shadow
:
0
0
0
4px
var
(
-
-
in
-
content
-
border
-
active
-
shadow
)
;
}
html
|
select
:
not
(
[
size
]
)
:
not
(
[
multiple
]
)
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
dropdown
.
svg
#
dropdown
"
)
;
background
-
position
:
right
3px
center
;
background
-
repeat
:
no
-
repeat
;
background
-
size
:
auto
18px
;
font
-
size
:
inherit
;
padding
-
inline
-
start
:
5px
;
padding
-
inline
-
end
:
24px
;
text
-
overflow
:
ellipsis
;
}
html
|
select
:
not
(
[
size
]
)
:
not
(
[
multiple
]
)
:
dir
(
rtl
)
{
background
-
position
:
left
3px
center
;
}
html
|
button
:
enabled
:
hover
html
|
select
:
not
(
[
size
]
)
:
not
(
[
multiple
]
)
:
enabled
:
hover
html
|
input
[
type
=
"
color
"
]
:
hover
xul
|
button
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
xul
|
menulist
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
hover
)
;
}
html
|
button
:
enabled
:
hover
:
active
html
|
select
:
not
(
[
size
]
)
:
not
(
[
multiple
]
)
:
enabled
:
hover
:
active
html
|
input
[
type
=
"
color
"
]
:
enabled
:
hover
:
active
xul
|
button
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
:
active
xul
|
button
[
open
]
xul
|
button
[
open
]
:
hover
xul
|
menulist
[
open
=
"
true
"
]
:
not
(
[
disabled
=
"
true
"
]
)
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
active
)
;
}
html
|
button
:
disabled
html
|
select
:
disabled
html
|
input
[
type
=
"
color
"
]
:
disabled
xul
|
button
[
disabled
=
"
true
"
]
xul
|
menulist
[
disabled
=
"
true
"
]
{
opacity
:
0
.
4
;
}
html
|
button
[
autofocus
]
*
|
button
.
primary
{
background
-
color
:
var
(
-
-
in
-
content
-
primary
-
button
-
background
)
;
color
:
var
(
-
-
in
-
content
-
selected
-
text
)
!
important
;
}
html
|
button
[
autofocus
]
:
enabled
:
hover
html
|
button
.
primary
:
enabled
:
hover
xul
|
button
.
primary
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
primary
-
button
-
background
-
hover
)
;
}
html
|
button
[
autofocus
]
:
enabled
:
hover
:
active
html
|
button
.
primary
:
enabled
:
hover
:
active
xul
|
button
.
primary
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
:
active
{
background
-
color
:
var
(
-
-
in
-
content
-
primary
-
button
-
background
-
active
)
;
}
html
|
button
.
ghost
-
button
{
background
-
color
:
transparent
;
}
html
|
button
.
ghost
-
button
:
enabled
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
)
;
}
html
|
button
.
ghost
-
button
:
enabled
:
hover
:
active
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
hover
)
;
}
html
|
input
[
type
=
"
color
"
]
{
padding
:
6px
;
width
:
50px
;
}
/* ... */

