Bug 1519548 - Introduce dark mode in-content page preference. r=dao,jaws
Differential Revision: https://phabricator.services.mozilla.com/D16363

UltraBlame original commit: 119fa544fa307bdbc2a802bfd51862e5cee43fcc

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -1359,6 +1359,322 @@ a30
 )
 ;
 }
+supports
+-
+moz
+-
+bool
+-
+pref
+(
+"
+browser
+.
+in
+-
+content
+.
+dark
+-
+mode
+"
+)
+{
+media
+(
+prefers
+-
+color
+-
+scheme
+:
+dark
+)
+{
+:
+root
+{
+-
+-
+in
+-
+content
+-
+page
+-
+background
+:
+#
+2A2A2E
+;
+-
+-
+in
+-
+content
+-
+page
+-
+color
+:
+rgb
+(
+249
+249
+250
+)
+;
+-
+-
+in
+-
+content
+-
+text
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+page
+-
+color
+)
+;
+-
+-
+in
+-
+content
+-
+box
+-
+background
+:
+#
+202023
+;
+-
+-
+in
+-
+content
+-
+box
+-
+background
+-
+hover
+:
+rgba
+(
+249
+249
+250
+0
+.
+15
+)
+;
+-
+-
+in
+-
+content
+-
+box
+-
+background
+-
+active
+:
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
+;
+-
+-
+in
+-
+content
+-
+box
+-
+background
+-
+odd
+:
+rgba
+(
+249
+249
+250
+0
+.
+05
+)
+;
+-
+-
+in
+-
+content
+-
+border
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
+;
+-
+-
+in
+-
+content
+-
+box
+-
+border
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
+;
+-
+-
+in
+-
+content
+-
+button
+-
+background
+:
+rgba
+(
+249
+249
+250
+0
+.
+1
+)
+;
+-
+-
+in
+-
+content
+-
+button
+-
+background
+-
+hover
+:
+rgba
+(
+249
+249
+250
+0
+.
+15
+)
+;
+-
+-
+in
+-
+content
+-
+button
+-
+background
+-
+active
+:
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
+;
+-
+-
+in
+-
+content
+-
+category
+-
+text
+-
+selected
+:
+var
+(
+-
+-
+blue
+-
+40
+)
+;
+-
+-
+in
+-
+content
+-
+link
+-
+color
+:
+var
+(
+-
+-
+blue
+-
+40
+)
+;
+}
+}
+}
 html
 |
 html
@@ -2255,15 +2571,15 @@ global
 /
 skin
 /
-in
--
-content
+icons
 /
+arrow
+-
 dropdown
+-
+12
 .
 svg
-#
-dropdown
 "
 )
 ;
@@ -2288,7 +2604,20 @@ background
 size
 :
 auto
-18px
+12px
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
 ;
 font
 -
@@ -3023,11 +3352,13 @@ global
 /
 skin
 /
-in
--
-content
+icons
 /
+arrow
+-
 dropdown
+-
+12
 .
 svg
 "
@@ -3044,10 +3375,7 @@ fill
 ;
 fill
 :
--
-moz
--
-DialogText
+currentColor
 ;
 }
 xul
@@ -3068,35 +3396,11 @@ icon
 {
 width
 :
-18px
+12px
 ;
 height
 :
-18px
-;
-}
-xul
-|
-menulist
-[
-disabled
-=
-"
-true
-"
-]
->
-xul
-|
-*
-.
-menulist
--
-dropmarker
-{
-fill
-:
-GrayText
+12px
 ;
 }
 xul
@@ -6566,12 +6870,36 @@ transparent
 transparent
 20
 %
-#
-c1c1c1
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+border
+-
+color
+)
 20
 %
-#
-c1c1c1
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+border
+-
+color
+)
 80
 %
 transparent
@@ -6649,10 +6977,7 @@ fill
 ;
 fill
 :
--
-moz
--
-DialogText
+currentColor
 ;
 width
 :
